# otaku

./: .gitignore  .gitleaks.toml  .gitleaksignore  .prettierignore  CHANGELOG.md  LICENSE  Makefile  README.md  claude.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy-pages.yml  homebrew-bump.yml  release.yml  security.yml
.husky/: pre-commit
docs/: CLAUDE.md  README.md  index.html  script.js  styles.css
docs/plans/: 2026-02-16-jikan-migration-design.md  2026-02-16-jikan-migration-plan.md  2026-03-05-offline-experience-design.md  2026-03-05-offline-experience-plan.md  2026-03-07-schedule-page-design.md  2026-03-07-schedule-page-plan.md
docs/superpowers/plans/: 2026-03-22-watch-history-and-stats.md  2026-04-12-recommendation-engine.md  2026-05-28-background-mode-tray-notifications-plan.md
docs/superpowers/specs/: 2026-03-16-opencode-orchestrator-design.md  2026-03-22-watch-history-and-stats-design.md  2026-04-12-recommendation-engine-design.md  2026-04-16-binge-watch-design.md  2026-05-28-background-mode-tray-notifications-design.md  CLAUDE.md
scripts/: patch-android.sh
src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/extensions/: allanime.js  example-anime.js
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_fix_watch_history.sql  003_rename_current_time.sql  004_downloads_table.sql  005_fix_column_rename.sql  006_fix_downloads_table.sql  007_reading_history.sql  008_add_manga_library_statuses.sql  009_notifications.sql  010_app_settings.sql  011_release_tracking.sql  012_library_tags.sql  013_release_tracking_v2.sql  014_discover_cache.sql  015_id_mappings.sql  016_clear_stale_mappings.sql  017_migration_archive.sql  018_discover_cache_ttl.sql  019_clear_mappings_v2.sql  020_clear_mappings_v3.sql  021_clear_mappings_v4.sql  022_clear_mappings_v5.sql  023_feedback_table.sql  024_library_auto_download.sql
src-tauri/patches/android/: MainActivity.kt
src-tauri/patches/rquickjs-sys/: .cargo_vcs_info.json  Cargo.toml  build.rs
src-tauri/src/: CLAUDE.md  auto_backup.rs  commands.rs  lib.rs  notifications.rs  release_checker.rs  request_headers.rs  status_normalizer.rs  tray.rs  tray_stub.rs  video_server.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/database/: CLAUDE.md  discover_cache.rs  export_import.rs  feedback.rs  history.rs  library.rs  media.rs  migration_runner.rs  mod.rs  reading_history.rs  recommendations.rs  stats.rs  tags.rs  watch_history.rs
src-tauri/src/downloads/: chapter_downloads.rs  mod.rs  obfuscation.rs
src-tauri/src/extensions/: CLAUDE.md  extension.rs  mod.rs  runtime.rs  sandbox.rs  types.rs
src-tauri/src/jikan/: CLAUDE.md  anime.rs  bridge.rs  client.rs  commands.rs  manga.rs  mod.rs  schedule.rs  types.rs
src-tauri/src/media/: mod.rs
src-tauri/src/trackers/: mod.rs
src/components/: MigrationScreen.tsx
src/components/browse/: ActiveFilterChips.tsx  BrowseHeader.tsx  BrowseSidebar.tsx  CLAUDE.md
src/components/history/: HistoryEntry.tsx  HistoryPage.tsx  SeriesCard.tsx  SeriesView.tsx  TimelineView.tsx
src/components/home/: RecommendationCarousel.tsx
src/components/layout/: ApiStatusIndicator.tsx  AppShell.tsx  BottomTabBar.tsx  Footer.tsx  OfflineGuard.tsx  TopNav.tsx
src/components/media/: CLAUDE.md  CharacterGrid.tsx  ContinueReadingSection.tsx  ContinueWatchingSection.tsx  DetailTabBar.tsx  GalleryGrid.tsx  GenreFilterBar.tsx  HeroSection.tsx  HeroSectionSkeleton.tsx  LibraryDropdown.tsx  MangaDetailModal.tsx  MediaCard.tsx  MediaCarousel.tsx  MediaDetailModal.tsx  MobileHeroSection.tsx  NewsCard.tsx  NextEpisodeCountdown.tsx  ReviewCard.tsx  ScoreDistribution.tsx  StaffList.tsx  Top10Section.tsx
src/components/notifications/: MobileNotificationCenter.tsx  NotificationCenter.tsx  NotificationItem.tsx  ReleaseCheckOverlay.tsx  ReleaseRadarGroupCard.tsx  index.ts
src/components/offline/: OfflineHub.tsx
src/components/onboarding/: FeatureCard.tsx  OnboardingFlow.tsx  SetupWizard.tsx  StepIndicator.tsx  WelcomePage.tsx
src/components/player/: DownloadButton.tsx  DownloadManager.test.tsx  DownloadManager.tsx  EpisodeList.tsx  MiniPlayer.tsx  VideoPlayer.tsx  index.ts
src/contexts/: MediaStatusContext.tsx
src/extensions/: CLAUDE.md  allanime-extension.ts  allanime-manga-extension.ts  mangakakalot-extension.ts
src/hooks/: useAutoUpdateCheck.tsx  useChapterDownloadEvents.ts  useDeeplinkListener.test.ts  useDeeplinkListener.ts  useDownloadEvents.ts  useDownloadStatus.ts  useJikanQuery.ts  useKeyboardShortcut.ts  useMediaStatus.ts  useMobileLayout.ts  useNetworkStatus.ts  useNotificationEvents.tsx  useProxiedImage.ts  useReleaseStates.ts  useSpotlightSearch.ts  useUpdater.ts
src/lib/: utils.ts
src/routes/: CLAUDE.md  __root.tsx  anime.tsx  downloads.tsx  history.tsx  home.tsx  index.tsx  library.tsx  logs.tsx  manga.tsx  notifications.tsx  read.tsx  schedule.tsx  settings.tsx  stats.tsx  watch.tsx
src/store/: CLAUDE.md  mediaStore.ts  notificationStore.ts  pipStore.ts  playerStore.ts  readerStore.ts  settingsStore.ts  updateStore.ts
src/types/: extension.ts
src/utils/: hlsResolve.ts  manga-extensions.ts  mediaHelpers.ts  mediaSort.test.ts  mediaSort.ts  notify.ts  nsfw-filter.ts  pickSource.ts  platform.ts  proxyImageCache.ts  return-media.ts  tauri-commands.ts
(+48 files in other folders)
