[package]
name = "app"
version = "0.1.13"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Extension system
rquickjs = { version = "0.7", features = ["loader", "classes"] }
ureq = { version = "2.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
regex = "1.11"
anyhow = "1.0"
dirs = "5.0"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }

# Downloads
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# Embedded video streaming server (workaround for Tauri protocol memory issues)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }
rand = "0.8"
async-stream = "0.3"
urlencoding = "2.1"
tokio-util = { version = "0.7", features = ["io"] }

# System metrics
sysinfo = "0.31"

[profile.dev]
debug = 0              # No debug symbols (saves ~50% space)
opt-level = 0          # Fast compilation
incremental = true     # Keep incremental compilation

[profile.dev.package."*"]
opt-level = 2          # Optimize dependencies (smaller + faster runtime)
